<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
                 android:id="@+id/name_text_view"
                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:textSize="15sp"
                android:textColor="#be0e0a"
                 android:text="安卓调用JS"/>
    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:text="@string/method1"
        android:layout_height="48dp"
        />
    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:text="@string/method2"
        android:layout_height="48dp"
        />

    <TextView
        android:id="@+id/name_text_view2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="#be0e0a"
        android:text="JS调用Android"/>


    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:text="@string/method3"
        android:layout_height="60dp"
        />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:text="@string/method4"
        android:layout_height="60dp"
        />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:text="@string/method5"
        android:layout_height="60dp"
        />


 </LinearLayout>